--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&display=swap" rel="stylesheet">
     <!-- Tailwind CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style>
         * {
@@ -46,11 +47,12 @@
 
     <!-- Main Section Here -->
      <div class="container">
-        <div class="grid grid-cols-12 gap-[15px]">
-            <div id="news-container" class="col-span-9 grid grid-cols-3 gap-[15px] pt-[30px]"></div>
-            <div class="col-span-3 mt-[30px]">
-                <div class="text-center py-[10px] border border-gray-300 rounded-md">
+        <div class="grid grid-cols-12 gap-[15px] pb-8">
+            <div id="news-container" class="col-span-12 md:col-span-9 grid md:grid-cols-2 lg:grid-cols-3 gap-[20px] pt-[30px] order-2 md:order-1"></div>
+            <div class="col-span-12 md:col-span-3 mt-[30px] order-1 md:order-2">
+                <div class="py-[10px] border border-gray-300 rounded-md flex justify-between items-center px-[15px]">
                     <h1 class="text-[18px] text-[#141414] font-[700]">Bookmark</h1>
+                    <p id="bookmark-count" class="text-[18px] text-[#141414] font-[700]">0</p>
                 </div>
                 <div id="bookmark-container">
                 </div>
@@ -59,12 +61,22 @@
      </div>
     <!-- Main Section Here -->
 
-
-
-
-
-
-
+    
+    <!-- Open the modal using ID.showModal() method -->
+     <dialog id="modal_box" class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+            <div id="modal-container">
+                
+            </div>
+            <div class="modal-action">
+                <form method="dialog">
+                    <!-- if there is a button in form, it will close the modal -->
+                    <button class="btn">Close</button>
+                </form>
+            </div>
+        </div>
+     </dialog>
+    <!-- Open the modal using ID.showModal() method -->
 
 
 
