--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             </div>
         </div>
         <div class="container">
-            <ul id="categorieContainer" class="flex gap-[25px] py-[15px]">
+            <div id="categorieContainer" class="flex flex-wrap gap-[25px] py-[15px]">
                 
-            </ul>
+            </div>
         </div>
      </header>
     <!-- Header Section Here -->
